[package]
name = "libpathfinder"
version = "0.1.0"
authors = ["Quinten Palmer <quintenpalmer@gmail.com>"]

[dependencies]
iron = "0.5.1"
urlencoded = "0.5.0"
serde = "1.0.0"
serde_json = "1.0.0"
serde_derive = "1.0.0"
postgres = "0.14"
libpathfinder_common = {path = "../libpathfinder_common"}
libpathfinder_derive = {path = "../libpathfinder_derive"}
